Fix disconnectFromHost when in connecting state

While the client or rather its underlying transport is trying to connect
to a broker, a user might want to cancel this step by calling
disconnectFromHost. Previously there was an early return, which lead to
the client being in a bogus state.

Task-number: QTBUG-66412
Change-Id: If6e9b778b8d10f7951631ebd1a0017c870ba6c18
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>